Parameter has new meta property compareMode; missing access modifiers caused by bug of phpfmt has been added; very simple URL-crafting method in PathBase implemented, a unit test has been written;

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     },
     "require": {
         "marc-mabe/php-enum": "^3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.3"
     }
 }
