--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,13 @@
             "src/constants.php"
         ]
     },
+    "repositories": [{
+        "type": "vcs",
+        "url": "https://github.com/teroneko/teronis-php-core.git"
+}],
     "require": {
-        "marc-mabe/php-enum": "^3.0"
+        "marc-mabe/php-enum": "^3.0",
+        "teronis-php/core": "dev-master as 1.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
