--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
     "repositories": [{
         "type": "vcs",
         "url": "https://github.com/teroneko/teronis-php-core.git"
-}],
+    }],
     "require": {
         "marc-mabe/php-enum": "^3.0",
         "teronis-php/core": "dev-master as 1.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
-    }
+    },
+    "scripts": {}
 }
